fluxcd/apps/base/simple-vault-client/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-vault-client
  labels:
    app: simple-vault-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-vault-client
  template:
    metadata:
      labels:
        app: simple-vault-client
    spec:
      serviceAccountName: simple-vault-client
      containers:
        - name: app
          image: hashieducation/simple-vault-client:latest
          imagePullPolicy: Always
