fluxcd/apps/base/simple-vault-client/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-vault-client
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /simple-vault-client
            pathType: Prefix
            backend:
              service:
                name: simple-vault-client
                port:
                  number: 8080
